3rd commit
- Started logic for initializing and creating VR!
- Finalized server logic and optimized networking
- Setup logic for meshes and how to use them in the game
- Attempted to create water physics (Might take a few more weeks)
- Created the ModelStack class to more accurately represent what's being viewed in-game
- Created an interpolation affect using Linear Interpolation
- Started creating logic for controls in developer mode and finalized communication between cliend and server
- Started Player logic.